--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Controller.Activities.DetailedActivity"
             android:launchMode="singleTop"
             android:parentActivityName=".Controller.Activities.RecipesActivity" />
-
         <activity
             android:name=".Controller.Activities.StepDetailActivity"
             android:parentActivityName=".Controller.Activities.DetailedActivity" />
+
+        <receiver android:name=".Controller.Widgets.RecipeWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/recipe_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
